feat: add STM section

--- a/pps-project-presentation.tex
+++ b/pps-project-presentation.tex
@@ -20,7 +20,7 @@
 \input{sections/3-error-model.tex}
 \input{sections/4-parallelismo-e-concorrenza.tex}
 \input{sections/5-dependency-injection.tex}
-% \input{sections/6-STM copy.tex}
+\input{sections/6-STM.tex}
 % \input{sections/7-ZStream.tex}
 
 %\input{bibliografia.tex}
