--- a/style/ancro-slide-format.tex
+++ b/style/ancro-slide-format.tex
@@ -15,6 +15,7 @@
 \usepackage{listings}
 \usepackage[export]{adjustbox}
 \usepackage{aeguill}
+\usepackage{amsmath}
 
 %\setbeamertemplate{title page}[default][rounded=false]
 
