feat: add bibliography

--- a/pps-project-presentation.tex
+++ b/pps-project-presentation.tex
@@ -24,7 +24,7 @@
 \input{sections/7-ZStream.tex}
 \input{sections/8-Conclusioni.tex}
 
-%\input{bibliografia.tex}
+\input{bibliografia.tex}
 
 \end{document}
 
