fix: add failure constructor

--- a/sections/3-error-model.tex
+++ b/sections/3-error-model.tex
@@ -25,7 +25,7 @@
 \begin{frame}
   \begin{block}{Gestione delle \textit{Failure}}
     \begin{itemize}
-      \item Una \textit{failure} può essere modellata tramite il costruttore.
+      \item Una \textit{failure} può essere modellata tramite il costruttore \texttt{ZIO.fail}.
       \item Le \textit{failure} possono essere recuperate tramite l'operatore \texttt{catchAll}.
       \item Le \textit{failure} possono diventare \textit{defect} tramite l'operatore \texttt{orDie}.
     \end{itemize}
